# sel-marketing-agent

./: .env.example  .gitignore  Cargo.toml  README.md  baseline_metrics.md
.github/workflows/: approve.yml  scout.yml  weekly.yml
src/: config.rs  lib.rs  models.rs
src/dispatch/: mod.rs  reddit_poster.rs
src/forge/: groq_client.rs  mod.rs  templates.rs
src/gate/: mod.rs  telegram.rs
src/ledger/: mod.rs  storage.rs
src/scout/: github_scanner.rs  hackernews.rs  mod.rs  reddit.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/screens/: dashboard.rs  drafts.rs  mod.rs  published.rs  settings.rs  signals.rs
