[package]
name = "sel-marketing-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scout"
path = "src/bin/scout.rs"

[[bin]]
name = "forge"
path = "src/bin/forge.rs"

[[bin]]
name = "gate"
path = "src/bin/gate.rs"

[[bin]]
name = "dispatch"
path = "src/bin/dispatch.rs"

[[bin]]
name = "report"
path = "src/bin/report.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.11", features = ["json"] }
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
dotenvy      = "0.15"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui      = "0.26"
crossterm    = "0.27"
